add pagination to spec
